--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,13 +1,12 @@
 .header {
   display: flex;
-  /* justify-content: space-between; */
-  align-items: center;
   justify-content: space-between;
-  margin: 0.7rem 0;
+  align-items: center;
+  margin: 0.5rem 0;
 }
 
 .logo {
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   font-weight: bold;
   font-style: italic;
 }
@@ -15,11 +14,11 @@
 .header-container {
   border: 1px solid rgb(232, 232, 232);
   box-shadow: rgb(240, 240, 240) 2px 2px 8px;
-  padding: 1.2rem 0.8rem;
+  padding: 0.7rem;
   border-radius: 8px;
   width: 70%;
   display: flex;
-  font-size: 1.2rem;
+  font-size: 1rem;
   align-items: center;
 }
 
@@ -68,7 +67,7 @@
   border: none;
   font-weight: lighter;
   outline: 0;
-  font-size: 1.2rem;
+  font-size: 1rem;
   width: 100%;
   color: black;
 }
