--- a/src/styles/commonStyle.css
+++ b/src/styles/commonStyle.css
@@ -14,3 +14,10 @@ a:hover {
   color: #000;
   transition: 0.3s;
 }
+
+.common-collection-txt {
+  font-size: 30px;
+  color: #1c1c1c;
+  font-weight: 600;
+  margin-bottom: 32px;
+}
