--- a/src/data/foodData.css
+++ b/src/data/foodData.css
@@ -1,20 +1,23 @@
 .food-wrapper {
   margin: 2rem 0;
-  display: inline-grid;
+  display: grid;
   grid-template-columns: auto auto auto;
-  gap: 1.5rem;
+  justify-content: space-evenly;
+  row-gap: 1.5rem;
 }
 
 .food-box {
-  width: 300px;
+  width: 350px;
   height: 400px;
   padding: 10px;
   border: 2px solid rgb(255, 255, 255);
   border-radius: 1rem;
+  cursor: pointer;
 }
 
 .food-box:hover {
   border: 2px solid rgb(232, 232, 232);
+  box-shadow: 2px 2px 10px rgb(232, 232, 232);
 }
 
 .food-box img {
@@ -27,4 +30,43 @@
 .food-box h6 {
   font-weight: 600;
   font-size: 1rem;
+}
+
+.food-box p {
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0.3rem 0;
+  line-height: 2;
+}
+
+.rating {
+  display: flex;
+  align-items: center;
+  padding: 0 0.3rem;
+  border-radius: 0.3rem;
+  background-color: green;
+  color: #fff;
+  font-weight: 600;
+  font-size: 0.8rem;
+}
+
+.rating i {
+  font-size: 0.5rem;
+  margin-left: 0.2rem;
+}
+
+.price {
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.time {
+  display: flex;
+  flex-direction: row-reverse;
 }
